--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,26 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 body {
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  background: #BCADAD;
+  background: #bcb8b1;
 }
 
 .main {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   margin-left: 10%;
   margin-right: 10%;
 }
@@ -19,7 +30,6 @@ body {
   align-items: center;
   justify-content: center;
   position: sticky;
-  top: 0;
   cursor: pointer;
 }
 
@@ -69,24 +79,15 @@ body {
   color: grey;
 }
 
-.section {
-  height: 200px;
-  display: flex;
-  align-items: center;
-  background-color: rgb(250, 250, 250);
-  justify-content: space-between;
-}
-
 .center {
   text-align: center;
 }
 
 .footer {
+  margin-top: auto;
   height: auto;
   width: 100%;
   background: #4D4D4D;
-  position: sticky;
-  bottom: 0;
 }
 
 .text-footer {
